--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,44 +17,46 @@
     <tbody id='contacts'></tbody>
 </table>
 
-<script lang=javascript>
-    const {
-        Stitch,
-        RemoteMongoClient,
-        UserPasswordCredential
-    } = stitch;
-    const stitchClient = Stitch.initializeDefaultAppClient('vinacann-vceuu');
-    login('cuongnguyen5996@gmail.com', 'q1w2e3r4').then((user) => {
-        console.log(user);
-        // Initialize a MongoDB Service Client
-        const mongodb = stitchClient.getServiceClient(
-            RemoteMongoClient.factory,
-            'mongodb-atlas'
-        );
-        // Get a hook to the employees collection
-        const contacts = mongodb.db('vinacann').collection('contacts');
-        return contacts.find({}).asArray()
-    })
-        .then(displayContacts)
-    function login(email, password) {
-        const credential = new UserPasswordCredential(email, password);
-        return stitchClient.auth.loginWithCredential(credential);
-    }
-    // Renders the the contacts' information in the table
-    function displayContacts(contacts) {
-        const contactsTableBody = document.getElementById('contacts');
-        const numResultsEl = document.getElementById('num-results');
-        const tableRows = contacts.map(contact => {
-            return `
-      <tr>
-        <td>${contact.first_name}, ${contact.last_name}</td>
-        <td>${contact.email}</td>
-        <td>${contact.gender}</td>
-        <td>${contact.ip_address}</td>
-      </tr>
-    `;
-        });
-        contactsTableBody.innerHTML = tableRows.join('');
-        numResultsEl.innerHTML = contacts.length;
-    }
-</script>
+<script src="../server/favorite.js"></script>
+<script src="../server/user.js"></script>
+<!--<script language=javascript>-->
+    <!--const {-->
+        <!--Stitch,-->
+        <!--RemoteMongoClient,-->
+        <!--UserPasswordCredential-->
+    <!--} = stitch;-->
+    <!--const stitchClient = Stitch.initializeDefaultAppClient('vinacann-vceuu');-->
+    <!--login('cuongnguyen5996@gmail.com', 'q1w2e3r4').then((user) => {-->
+        <!--console.log(user);-->
+        <!--// Initialize a MongoDB Service Client-->
+        <!--const mongodb = stitchClient.getServiceClient(-->
+            <!--RemoteMongoClient.factory,-->
+            <!--'mongodb-atlas'-->
+        <!--);-->
+        <!--// Get a hook to the employees collection-->
+        <!--const contacts = mongodb.db('vinacann').collection('contacts');-->
+        <!--return contacts.find({}).asArray()-->
+    <!--})-->
+        <!--.then(displayContacts)-->
+    <!--function login(email, password) {-->
+        <!--const credential = new UserPasswordCredential(email, password);-->
+        <!--return stitchClient.auth.loginWithCredential(credential);-->
+    <!--}-->
+    <!--// Renders the the contacts' information in the table-->
+    <!--function displayContacts(contacts) {-->
+        <!--const contactsTableBody = document.getElementById('contacts');-->
+        <!--const numResultsEl = document.getElementById('num-results');-->
+        <!--const tableRows = contacts.map(contact => {-->
+            <!--return `-->
+      <!--<tr>-->
+        <!--<td>${contact.first_name}, ${contact.last_name}</td>-->
+        <!--<td>${contact.email}</td>-->
+        <!--<td>${contact.gender}</td>-->
+        <!--<td>${contact.ip_address}</td>-->
+      <!--</tr>-->
+    <!--`;-->
+        <!--});-->
+        <!--contactsTableBody.innerHTML = tableRows.join('');-->
+        <!--numResultsEl.innerHTML = contacts.length;-->
+    <!--}-->
+<!--</script>-->
