--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!-- Base Stitch Browser SDK -->
-<script src='https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.14/stitch.js'></script>
+<script src='https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js'></script>
 
 <div class='results-bar'>
     <p>Count of Results:</p>
@@ -17,46 +17,72 @@
     <tbody id='contacts'></tbody>
 </table>
 
-<script src="../server/favorite.js"></script>
-<script src="../server/user.js"></script>
-<!--<script language=javascript>-->
-    <!--const {-->
-        <!--Stitch,-->
-        <!--RemoteMongoClient,-->
-        <!--UserPasswordCredential-->
-    <!--} = stitch;-->
-    <!--const stitchClient = Stitch.initializeDefaultAppClient('vinacann-vceuu');-->
-    <!--login('cuongnguyen5996@gmail.com', 'q1w2e3r4').then((user) => {-->
-        <!--console.log(user);-->
-        <!--// Initialize a MongoDB Service Client-->
-        <!--const mongodb = stitchClient.getServiceClient(-->
-            <!--RemoteMongoClient.factory,-->
-            <!--'mongodb-atlas'-->
-        <!--);-->
-        <!--// Get a hook to the employees collection-->
-        <!--const contacts = mongodb.db('vinacann').collection('contacts');-->
-        <!--return contacts.find({}).asArray()-->
-    <!--})-->
-        <!--.then(displayContacts)-->
-    <!--function login(email, password) {-->
-        <!--const credential = new UserPasswordCredential(email, password);-->
-        <!--return stitchClient.auth.loginWithCredential(credential);-->
-    <!--}-->
-    <!--// Renders the the contacts' information in the table-->
-    <!--function displayContacts(contacts) {-->
-        <!--const contactsTableBody = document.getElementById('contacts');-->
-        <!--const numResultsEl = document.getElementById('num-results');-->
-        <!--const tableRows = contacts.map(contact => {-->
-            <!--return `-->
-      <!--<tr>-->
-        <!--<td>${contact.first_name}, ${contact.last_name}</td>-->
-        <!--<td>${contact.email}</td>-->
-        <!--<td>${contact.gender}</td>-->
-        <!--<td>${contact.ip_address}</td>-->
-      <!--</tr>-->
-    <!--`;-->
-        <!--});-->
-        <!--contactsTableBody.innerHTML = tableRows.join('');-->
-        <!--numResultsEl.innerHTML = contacts.length;-->
-    <!--}-->
-<!--</script>-->
+<!--<script src="../server/recipe.api.js" language="JavaScript"></script>-->
+<!--<script src="../server/user.api.js" language="JavaScript"></script>-->
+<script language=javascript>
+    const {
+        Stitch,
+        RemoteMongoClient,
+        UserPasswordCredential,
+        GoogleRedirectCredential,
+    } = stitch;
+
+    // Initialize a MongoDB Service Client
+    const stitchClient = Stitch.initializeDefaultAppClient('vinacann-vceuu');
+    const mongodb = stitchClient.getServiceClient(
+        RemoteMongoClient.factory,
+        'mongodb-atlas'
+    );
+
+    login('cuongnguyen5996@gmail.com', 'q1w2e3r4')
+        .then(() => {
+            return mongodb.db('vinacann').collection('contacts')
+                .find({})
+                .asArray();
+        }).then(displayContacts)
+
+    // console.log(addRecipeToFavorite(1, "Hi"));
+    console.log(getListOfFavRecipeBasedOnUserId(1));
+
+    function login(email, password) {
+        const credential = new GoogleRedirectCredential();
+        if (!stitchClient.auth.isLoggedIn) {
+            return stitchClient.auth.loginWithRedirect(credential);
+        } else if(stitchClient.auth.hasRedirectResult()) {
+            return stitchClient.auth.handleRedirectResult();
+        }
+        return stitchClient.auth.loginWithRedirect(credential);
+    }
+
+
+    function displayContacts(contacts) {
+        const contactsTableBody = document.getElementById('contacts');
+        const numResultsEl = document.getElementById('num-results');
+        const tableRows = contacts.map(contact => {
+            return `
+      <tr>
+        <td>${contact.first_name}, ${contact.last_name}</td>
+        <td>${contact.email}</td>
+        <td>${contact.gender}</td>
+        <td>${contact.ip_address}</td>
+      </tr>
+    `;
+        });
+        contactsTableBody.innerHTML = tableRows.join('');
+        numResultsEl.innerHTML = contacts.length;
+    }
+
+    function getListOfFavRecipeBasedOnUserId(userID) {
+        mongodb.db('vinacann')
+            .collection('favoriteRecipe')
+            .find({userID: userID})
+            .asArray()
+            .then(res => {
+                console.log(res);
+                // return mongodb.db('vinacann')
+                //     .collection('recipe')
+                //     .find({id: res.recipeID})
+                //     .asArray()
+            })
+    }
+</script>
